--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
 <nav>
   <a href="index.html" class="active">🏠 Accueil</a>
-  <a href="projets.html">🧮 Projets de Simulation</a>
-  <a href="codes.html">💻 Scripts & Automatisations</a>
+  <a href="projets.html">🧮 Projets</a>
+  <a href="codes.html">💻 Scripts</a>
   <a href="publications.html">📄 Publications</a>
 </nav>
 
@@ -43,3 +43,4 @@
 
 </body>
 </html>
+
