--- a/codes.html
+++ b/codes.html
@@ -26,14 +26,15 @@
 
   <div class="code-grid">
 
-    <!-- Script 1 -->
-    <div class="code-block-group">
-      <h4>📁 génération_maillage_paramétrique.py</h4>
-      <p>Script Python pour générer automatiquement un maillage paramétrique 2D/3D à partir de dimensions variables et exporter au format Salomé (.hdf) ou OpenFOAM (.stl).</p>
-      <div class="button-row">
-        <a href="generation_maillage_parametrique.py" download class="code-download">⬇️ Télécharger</a>
-      </div>
-    </div>
+     <!-- Script 1 -->
+    <!-- <div class="code-block-group"> -->
+      <!-- <h4>📁 génération_maillage_paramétrique.py</h4> -->
+      <!-- <p>Script Python pour générer automatiquement un maillage paramétrique 2D/3D à partir de dimensions variables et exporter au format Salomé (.hdf) ou OpenFOAM (.stl).</p> -->
+      <!-- <div class="button-row"> -->
+        <!-- <a href="generation_maillage_parametrique.py" download class="code-download">⬇️ Télécharger</a> -->
+      <!-- </div> -->
+    <!-- </div> -->
+
 
     <!-- Script 2 -->
     <!-- <div class="code-block-group"> -->
@@ -63,3 +64,4 @@
 
 </body>
 </html>
+
