--- a/publications.html
+++ b/publications.html
@@ -16,26 +16,13 @@
 <nav>
   <a href="index.html" class="active">🏠 Accueil</a>
   <a href="projets.html">🧮 Projets </a>
-  <a href="codes.html">💻 Scripts</a>
+  <a href="codes.html">💻 Scripts & Automatisations</a>
   <a href="publications.html">📄 Publications</a>
 </nav>
 
 <div class="section">
   <h2>📄 Publications & Rapports Techniques</h2>
 
- <div class="project">
-    <h3>Rapports de Simulation CFD et FEM</h3>
-    <p>
-      Cette section rassemble mes publications et rapports techniques liés à mes projets de simulation numérique.  
-    </p>
-    <ul>
-	  <li><a href="Fondements_mecanique_fluides.pdf" target="_blank" rel="noopener noreferrer">📄 Fondements de la mécanique des fluides</a></li>
-      <li><a href="simulation_ddray_gam_by_cfd.pdf" target="_blank" rel="noopener noreferrer">📄 Evaluation de débit de doses par CFD</a></li>
-      <!-- <li><a href="Rapport_CFD_Aile.pdf" target="_blank" rel="noopener noreferrer">📄 Simulation CFD d’un profil d’aile NACA 0012</a></li> -->
-      <!-- <li><a href="Rapport_FEM_Piece.pdf" target="_blank" rel="noopener noreferrer">📄 Analyse de contraintes d’une pièce mécanique – Code_Aster / Salomé-Meca</a></li> -->
-      <!-- <li><a href="Rapport_ThermoMeca.pdf" target="_blank" rel="noopener noreferrer">📄 Couplage thermo-mécanique d’un échangeur</a></li> -->
-    </ul>
-  </div>
   <div class="project">
     <h3>Supports pédagogiques & Notebooks</h3>
     <p>
@@ -43,10 +30,22 @@
       Ces supports peuvent être utilisés comme tutoriels pour comprendre les workflows de simulation numérique.
     </p>
     <ul>
-	   <p>Des publications auront lieu très prochainement ...</p>
-	  <!-- <li><a href="Notebook_Maillage.ipynb" target="_blank" rel="noopener noreferrer">📄 Génération de maillage paramétrique</a></li> -->
+	  <li><a href="Fondements_mecanique_fluides.pdf" target="_blank" rel="noopener noreferrer">📄 Fondements de la mécanique des fluides</a></li>
+      <li><a href="simulation_ddray_gam_by_cfd.pdf" target="_blank" rel="noopener noreferrer">📄 Simulation CFD de débits de doses de rayonnement gamma</a></li>
       <!-- <li><a href="Notebook_PostTraitement.ipynb" target="_blank" rel="noopener noreferrer">📄 Post-traitement des champs CFD</a></li> -->
 	</ul>
+  </div>
+  <div class="project">
+    <h3>Rapports de Simulation CFD et FEM</h3>
+    <p>
+      Cette section rassemble mes publications et rapports techniques liés à mes projets de simulation numérique.  
+    </p>
+    <ul>
+	   <p>Des publications auront lieu très prochainement ...</p>
+      <!-- <li><a href="Rapport_CFD_Aile.pdf" target="_blank" rel="noopener noreferrer">📄 Simulation CFD d’un profil d’aile NACA 0012</a></li> -->
+      <!-- <li><a href="Rapport_FEM_Piece.pdf" target="_blank" rel="noopener noreferrer">📄 Analyse de contraintes d’une pièce mécanique – Code_Aster / Salomé-Meca</a></li> -->
+      <!-- <li><a href="Rapport_ThermoMeca.pdf" target="_blank" rel="noopener noreferrer">📄 Couplage thermo-mécanique d’un échangeur</a></li> -->
+    </ul>
   </div>
 
 </div>
@@ -59,4 +58,3 @@
 
 </body>
 </html>
-
