--- a/publications.html
+++ b/publications.html
@@ -2,55 +2,59 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Projets – Ib, Ingénieur en Simulation Numérique</title>
+  <title>Publications – Ib, Ingénieur en Simulation Numérique</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<body>
-  <div class="main-content">
-    <header>
-      <h1>CISSE Ibrahim – Ingénieur en Simulation Numérique</h1>
-      <p>Spécialiste en mécanique des fluides et des structures – modélisation, calcul et optimisation numérique</p>
-    </header>
+<header>
+  <h1>CISSE Ibrahim – Ingénieur en Simulation Numérique</h1>
+  <p>Spécialiste en mécanique des fluides et des structures – simulation, calcul et optimisation numérique</p>
+</header>
 
-    <nav>
-      <a href="index.html">🏠 Accueil</a>
-      <a href="projets.html">🧮 Projets </a>
-      <a href="codes.html">💻 Scripts & Automatisations</a>
-      <a href="publications.html">📄 Publications</a>
-    </nav>
+<nav>
+  <a href="index.html">🏠 Accueil</a>
+  <a href="projets.html">🧮 Projets </a>
+  <a href="codes.html">💻 Scripts & Automatisations</a>
+  <a href="publications.html">📄 Publications</a>
+</nav>
 
-    <div class="project">
-	  <h3>Simulation de la qualité de l'air par Machine Learning</h3>
-	  <a class="project-link" href="https://bit.ly/3KsFWq3" target="_blank" rel="noopener noreferrer">
-          📄 Tester l'application</a>
+<div class="section">
+  <h2>📄 Publications & Rapports Techniques</h2>
 
-	  <p></p>
-	  <div class="gallery">
-		<img src="Projet1_1.png" alt="air_quality">
-		<img src="Projet1_2.png" alt="air_quality">
-	  </div>
-	</div>
-	<div class="project">
-	  <h3>Tableau de bord des flux voyageurs SNCF par Machine Learning</h3>
-	   <a class="project-link" href="https://bit.ly/4mJutjo" target="_blank" rel="noopener noreferrer">
-          📄 Voir le projet complet</a>
-	  <p></p>
-	  <div class="gallery">
-		<img src="Projet2_1.png" alt="sncf">
-		<img src="Projet2_2.png" alt="sncf">
-	  </div>
-	</div>
-
+  <div class="project">
+    <h3>Supports pédagogiques & Notebooks</h3>
+    <p>
+      Notebooks Python annotés pour l’automatisation de maillages, post-traitement CFD et extraction de résultats FEM.  
+      Ces supports peuvent être utilisés comme tutoriels pour comprendre les workflows de simulation numérique.
+    </p>
+    <ul>
+	  <li><a href="Fondements_mecanique_fluides.pdf" target="_blank" rel="noopener noreferrer">📄 Fondements de la mécanique des fluides</a></li>
+      <li><a href="simulation_ddray_gam_by_cfd.pdf" target="_blank" rel="noopener noreferrer">📄 Simulation CFD de débits de doses de rayonnement gamma</a></li>
+      <!-- <li><a href="Notebook_PostTraitement.ipynb" target="_blank" rel="noopener noreferrer">📄 Post-traitement des champs CFD</a></li> -->
+	</ul>
+  </div>
+  <div class="project">
+    <h3>Rapports de Simulation CFD et FEM</h3>
+    <p>
+      Cette section rassemble mes publications et rapports techniques liés à mes projets de simulation numérique.  
+    </p>
+    <ul>
+	   <p>Des publications auront lieu très prochainement ...</p>
+      <!-- <li><a href="Rapport_CFD_Aile.pdf" target="_blank" rel="noopener noreferrer">📄 Simulation CFD d’un profil d’aile NACA 0012</a></li> -->
+      <!-- <li><a href="Rapport_FEM_Piece.pdf" target="_blank" rel="noopener noreferrer">📄 Analyse de contraintes d’une pièce mécanique – Code_Aster / Salomé-Meca</a></li> -->
+      <!-- <li><a href="Rapport_ThermoMeca.pdf" target="_blank" rel="noopener noreferrer">📄 Couplage thermo-mécanique d’un échangeur</a></li> -->
+    </ul>
   </div>
 
-  <footer>
-    <p>📧 <a class="email-link" href="mailto:ibrahim.cisse@ensam.eu">ibrahim.cisse@ensam.eu</a>  
-       📱 +33 7 65 62 16 11 
-    </p>
-  </footer>
-</body>
+</div>
 
+<footer>
+  <p>📧 <a class="email-link" href="mailto:ibrahim.cisse@ensam.eu">ibrahim.cisse@ensam.eu</a>  
+     📱 +33 7 65 62 16 11
+  </p>
+</footer>
+
+</body>
 </html>
