--- a/projets.html
+++ b/projets.html
@@ -8,73 +8,49 @@
 </head>
 <body>
 
-<header>
-  <h1>CISSE Ibrahim – Ingénieur en Simulation Numérique</h1>
-  <p>Spécialiste en mécanique des fluides et des structures – modélisation, calcul et optimisation numérique</p>
-</header>
+<body>
+  <div class="main-content">
+    <header>
+      <h1>CISSE Ibrahim – Ingénieur en Simulation Numérique</h1>
+      <p>Spécialiste en mécanique des fluides et des structures – modélisation, calcul et optimisation numérique</p>
+    </header>
 
-<nav>
-  <a href="index.html" class="active">🏠 Accueil</a>
-  <a href="projets.html">🧮 Projets </a>
-  <a href="codes.html">💻 Scripts</a>
-  <a href="publications.html">📄 Publications</a>
-</nav>
+    <nav>
+      <a href="index.html">🏠 Accueil</a>
+      <a href="projets.html">🧮 Projets </a>
+      <a href="codes.html">💻 Scripts & Automatisations</a>
+      <a href="publications.html">📄 Publications</a>
+    </nav>
 
+    <div class="project">
+	  <h3>Simulation de la qualité de l'air par Machine Learning</h3>
+	  <a class="project-link" href="https://bit.ly/3KsFWq3" target="_blank" rel="noopener noreferrer">
+          📄 Tester l'application</a>
 
-<!-- <div class="section">  -->
+	  <p></p>
+	  <div class="gallery">
+		<img src="Projet1_1.png" alt="air_quality">
+		<img src="Projet1_2.png" alt="air_quality">
+	  </div>
+	</div>
+	<div class="project">
+	  <h3>Tableau de bord des flux voyageurs SNCF par Machine Learning</h3>
+	   <a class="project-link" href="https://bit.ly/4mJutjo" target="_blank" rel="noopener noreferrer">
+          📄 Voir le projet complet</a>
+	  <p></p>
+	  <div class="gallery">
+		<img src="Projet2_1.png" alt="sncf">
+		<img src="Projet2_2.png" alt="sncf">
+	  </div>
+	</div>
 
-  <!-- <!-- Projet 1 --> -->
-  <!-- <div class="project"> -->
-    <!-- <h3>Simulation CFD d’un écoulement turbulent autour d’un profil d’aile NACA 0012</h3> -->
-    <!-- <p> -->
-      <!-- Étude de l’écoulement externe compressible autour d’un profil d’aile à différents angles d’incidence.   -->
-      <!-- Simulation réalisée sous <strong>OpenFOAM</strong> et post-traitement via <strong>ParaView</strong>.   -->
-      <!-- Validation des coefficients de portance et traînée par comparaison à des données expérimentales. -->
-    <!-- </p> -->
-    <!-- <a class="project-link" href="Projet1_Rapport_CFD.pdf" target="_blank" rel="noopener noreferrer">📄 Voir le rapport</a> -->
-    <!-- <div class="gallery"> -->
-      <!-- <img src="CFD_Aile_1.png" alt="Simulation CFD aile NACA"> -->
-      <!-- <img src="CFD_Aile_2.png" alt="Champ de vitesse autour de l’aile">  -->
-    <!-- </div> -->
-  <!-- </div> -->
+  </div>
 
-  <!-- <!-- Projet 2 --> -->
-  <!-- <div class="project"> -->
-    <!-- <h3>Analyse de contraintes dans une pièce mécanique – méthode des éléments finis</h3> -->
-    <!-- <p> -->
-      <!-- Étude statique linéaire d’un support soumis à une charge répartie.   -->
-      <!-- Modélisation, maillage et calcul réalisés avec <strong>Code_Aster</strong> via <strong>Salomé-Meca</strong>.   -->
-      <!-- Identification des zones critiques et proposition d’optimisations géométriques. -->
-    <!-- </p> -->
-    <!-- <a class="project-link" href="Projet2_Contraintes.pdf" target="_blank" rel="noopener noreferrer">📄 Voir le rapport</a> -->
-    <!-- <div class="gallery"> -->
-      <!-- <img src="FEM_Support_1.png" alt="Contraintes dans la pièce mécanique"> -->
-      <!-- <img src="FEM_Support_2.png" alt="Déformation du modèle 3D">  -->
-    <!-- </div> -->
-  <!-- </div> -->
-
-  <!-- <!-- Projet 3 --> -->
-  <!-- <div class="project"> -->
-    <!-- <h3>Couplage thermo-mécanique d’un échangeur – étude multiphysique</h3> -->
-    <!-- <p> -->
-      <!-- Simulation du comportement thermique et mécanique d’un échangeur soumis à un gradient de température.   -->
-      <!-- Calcul couplé via <strong>Elmer</strong> pour la conduction thermique et la déformation.   -->
-      <!-- Visualisation 3D du champ de température et de la contrainte équivalente. -->
-    <!-- </p> -->
-    <!-- <a class="project-link" href="Projet3_ThermoMeca.pdf" target="_blank" rel="noopener noreferrer">📄 Voir le rapport</a> -->
-    <!-- <div class="gallery"> -->
-      <!-- <img src="ThermoMeca_1.png" alt="Champ de température échangeur"> -->
-      <!-- <img src="ThermoMeca_2.png" alt="Champ de contraintes équivalentes">  -->
-    <!-- </div> -->
-  <!-- </div> -->
-<!-- </div> -->
-<p> En cours developpement, disponibilité très prochaine</p>
-<footer>
-  <p>📧 <a class="email-link" href="mailto:ibrahim.cisse@ensam.eu">ibrahim.cisse@ensam.eu</a>  
-     📱 +33 7 65 62 16 11 
-  </p>
-</footer>
-
+  <footer>
+    <p>📧 <a class="email-link" href="mailto:ibrahim.cisse@ensam.eu">ibrahim.cisse@ensam.eu</a>  
+       📱 +33 7 65 62 16 11 
+    </p>
+  </footer>
 </body>
-</html>
 
+</html>
