--- a/codes.html
+++ b/codes.html
@@ -16,7 +16,7 @@
 <nav>
   <a href="index.html">🏠 Accueil</a>
   <a href="projets.html">🧮 Projets</a>
-  <a href="codes.html" class="active">💻 Scripts </a>
+  <a href="codes.html">💻 Scripts </a>
   <a href="publications.html">📄 Publications</a>
 </nav>
 
@@ -64,4 +64,5 @@
 
 </body>
 </html>
+
 
