--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </header>
 
 <nav>
-  <a href="index.html" class="active">🏠 Accueil</a>
+  <a href="index.html">🏠 Accueil</a>
   <a href="projets.html">🧮 Projets</a>
   <a href="codes.html">💻 Scripts</a>
   <a href="publications.html">📄 Publications</a>
@@ -43,4 +43,5 @@
 
 </body>
 </html>
+
 
